src/objects/Survey__c.object
<CustomObject>
    <description>Clicktools survey integration.  Custom object is used to house survey results for those that do not map directly to another object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chat_Key__c</fullName>
        <externalId>true</externalId>
        <label>Chat Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compared_to_Competitors__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Compared to Competitors?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shopify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazon Webstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prostores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Expected_Plan_Type__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <label>Expected Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <label>Issue Resolved ?</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 -No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Selling_Points__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <inlineHelpText>What were the key selling points during this conversation?</inlineHelpText>
        <label>Key Selling Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Knowledgeable__c</fullName>
        <label>Knowledgeable</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Feedback__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <inlineHelpText>Based on the plan they selected please give additional feedback.
This could be about your conversation, their opinion of the plan, or any feedback you received overall</inlineHelpText>
        <label>Plan Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Professionalism__c</fullName>
        <label>Professionalism</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Feedback__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <inlineHelpText>What do you (as the rep) like or not like about the pricing? 
What worked for you? What didn&apos;t work for you?</inlineHelpText>
        <label>Rep Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Cycle_Speed__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <inlineHelpText>Did the new pricing change the speed of your sales cycle?</inlineHelpText>
        <label>Sales Cycle Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - Slowed me down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Helped me close faster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No or Not Noticeably</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>Satisfaction</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date__c</fullName>
        <label>Survey Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <picklist>
            <picklistValues>
                <fullName>Feedback | Pricing test (Direct reps)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Basic CSAT</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Sent_Date__c</fullName>
        <label>Survey Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_worked_didn_t__c</fullName>
        <description>Marketing : Feedback | Pricing test (Direct reps) survey</description>
        <inlineHelpText>What did the client stumble on while you were explaining the pricing? What worked? What didn&apos;t?</inlineHelpText>
        <label>What worked/didn&apos;t?</label>
        <type>TextArea</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>